Changed title/topic field to name and changed type of name and content to be json

--- a/src/app/pages/board/board-connector/board-connector.component.html
+++ b/src/app/pages/board/board-connector/board-connector.component.html
@@ -1,7 +1,8 @@
-<div class="drawn-square" #connector
-    [style.left.px]="data.x"
-    [style.top.px]="data.y"
-    [style.opacity]="data.opacity"
-    [innerHTML]="data.itemB.label"
->
-</div>
+<div
+  class="drawn-square"
+  #connector
+  [style.left.px]="data.x"
+  [style.top.px]="data.y"
+  [style.opacity]="data.opacity"
+  [innerHTML]="getTitleHtml()"
+></div>
